--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
       <h2>STREAMERS AO VIVO</h2>
       <div class="row">
         <div class="g-col-4 lives1">
-          <iframe src="https://player.twitch.tv/?channel=danimito1&parent=www.example.com" frameborder="0" allowfullscreen="true" scrolling="no" height="292" width="450"></iframe>
+          <iframe src="https://player.twitch.tv/?channel=danimito1&parent=https://ricardofuly.github.io/liverino/" frameborder="0" allowfullscreen="true" scrolling="no" height="292" width="450"></iframe>
         </div>
         <div class="g-col-4 lives2">
-          <iframe src="https://player.twitch.tv/?channel=ricky_rj&parent=www.example.com" frameborder="0" allowfullscreen="true" scrolling="no" height="292" width="450"></iframe>
+          <iframe src="https://player.twitch.tv/?channel=ricky_rj&parent=https://ricardofuly.github.io/liverino/" frameborder="0" allowfullscreen="true" scrolling="no" height="292" width="450"></iframe>
         </div>
         <div class="g-col-4 lives3">
-          <iframe src="https://player.twitch.tv/?channel=o_chris&parent=www.example.com" frameborder="0" allowfullscreen="true" scrolling="no" height="292" width="450"></iframe>
+          <iframe src="https://player.twitch.tv/?channel=o_chris&parent=https://ricardofuly.github.io/liverino/" frameborder="0" allowfullscreen="true" scrolling="no" height="292" width="450"></iframe>
         </div>
         <div class="g-col-4 lives4">
-          <iframe src="https://player.twitch.tv/?channel=o_chris&parent=www.example.com" frameborder="0" allowfullscreen="true" scrolling="no" height="292" width="450"></iframe>
+          <iframe src="https://player.twitch.tv/?channel=o_chris&parent=https://ricardofuly.github.io/liverino/" frameborder="0" allowfullscreen="true" scrolling="no" height="292" width="450"></iframe>
         </div>
       </div>
     </div>
