--- a/index.html
+++ b/index.html
@@ -7,12 +7,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    <script src="https://player.twitch.tv/js/embed/v1.js"></script>
-    <script type="text/javascript">
-      new Twitch.Player("twitch-embed", {
-        channel: "ricky_rj"
-      });
-    </script>
 
   </head>
   <body>
@@ -38,6 +32,19 @@
       <div class="row">
         <div class="g-col-4 lives1">
           <div id="twitch-embed"></div>
+            <!-- Load the Twitch embed JavaScript file -->
+            <script src="https://embed.twitch.tv/embed/v1.js"></script>
+
+            <!-- Create a Twitch.Embed object that will render within the "twitch-embed" element -->
+            <script type="text/javascript">
+              new Twitch.Embed("twitch-embed", {
+                width: 450,
+                height:292,
+                channel: "ricky_rj",
+                // Only needed if this page is going to be embedded on other websites
+                parent: ["ricardofuly.github.io/liverino/"]
+              });
+            </script>
         </div>
         <div class="g-col-4 lives2">
           <iframe src="https://player.twitch.tv/?channel=ricky_rj&parent=ricardofuly.github.io/liverino" frameborder="0" allowfullscreen="true" scrolling="no" height="292" width="450"></iframe>
