--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 height:292,
                 channel: "ricky_rj",
                 // Only needed if this page is going to be embedded on other websites
-                parent: ["ricardofuly.github.io/liverino"]
+                parent: ["ricardofuly.github.io"]
               });
             </script>
         </div>
