--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
             </script>
         </div>
         <div class="g-col-4 lives2">
-          
+
         </div>
         <div class="g-col-4 lives3">
-          <iframe src="https://player.twitch.tv/?channel=o_chris&parent=ricardofuly.github.io/liverino" frameborder="0" allowfullscreen="true" scrolling="no" height="292" width="450"></iframe>
+          <iframe src="https://player.twitch.tv/?channel=o_chris&parent=ricardofuly.github.io" frameborder="0" allowfullscreen="true" scrolling="no" height="292" width="450"></iframe>
         </div>
         <div class="g-col-4 lives4">
-          <iframe src="https://player.twitch.tv/?channel=o_chris&parent=ricardofuly.github.io/liverino" frameborder="0" allowfullscreen="true" scrolling="no" height="292" width="450"></iframe>
+          <iframe src="https://player.twitch.tv/?channel=o_chris&parent=ricardofuly.github.io" frameborder="0" allowfullscreen="true" scrolling="no" height="292" width="450"></iframe>
         </div>
       </div>
     </div>
