--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </script>
         </div>
         <div class="g-col-4 lives2">
-
+          <iframe src="https://player.twitch.tv/?channel=o_chris&parent=ricardofuly.github.io" frameborder="0" allowfullscreen="true" scrolling="no" height="292" width="450"></iframe>
         </div>
         <div class="g-col-4 lives3">
           <iframe src="https://player.twitch.tv/?channel=o_chris&parent=ricardofuly.github.io" frameborder="0" allowfullscreen="true" scrolling="no" height="292" width="450"></iframe>
