--- a/index.html
+++ b/index.html
@@ -31,29 +31,16 @@
       <h2>STREAMERS AO VIVO</h2>
       <div class="row">
         <div class="g-col-4 lives1">
-          <div id="twitch-embed"></div>
-            <!-- Load the Twitch embed JavaScript file -->
-            <script src="https://embed.twitch.tv/embed/v1.js"></script>
-
-            <!-- Create a Twitch.Embed object that will render within the "twitch-embed" element -->
-            <script type="text/javascript">
-              new Twitch.Embed("twitch-embed", {
-                width: 450,
-                height:292,
-                channel: "ricky_rj",
-                // Only needed if this page is going to be embedded on other websites
-                parent: ["ricardofuly.github.io"]
-              });
-            </script>
+          <iframe src="https://player.twitch.tv/?channel=ricky_rj&parent=ricardofuly.github.io" frameborder="0" allowfullscreen="true" scrolling="no" height="292" width="450"></iframe>
         </div>
         <div class="g-col-4 lives2">
           <iframe src="https://player.twitch.tv/?channel=o_chris&parent=ricardofuly.github.io" frameborder="0" allowfullscreen="true" scrolling="no" height="292" width="450"></iframe>
         </div>
         <div class="g-col-4 lives3">
-          <iframe src="https://player.twitch.tv/?channel=o_chris&parent=ricardofuly.github.io" frameborder="0" allowfullscreen="true" scrolling="no" height="292" width="450"></iframe>
+          <iframe src="https://player.twitch.tv/?channel=danimito1&parent=ricardofuly.github.io" frameborder="0" allowfullscreen="true" scrolling="no" height="292" width="450"></iframe>
         </div>
         <div class="g-col-4 lives4">
-          <iframe src="https://player.twitch.tv/?channel=o_chris&parent=ricardofuly.github.io" frameborder="0" allowfullscreen="true" scrolling="no" height="292" width="450"></iframe>
+          <iframe src="https://player.twitch.tv/?channel=hellequinm&parent=ricardofuly.github.io" frameborder="0" allowfullscreen="true" scrolling="no" height="292" width="450"></iframe>
         </div>
       </div>
     </div>
