--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
       <a class="navbar-brand" href="#">
-        <img src="img/logo.svg" alt="Logo" style="width:60px;">
+        <img src="img/logo.png" alt="Logo" style="width:60px;">
       </a>
       <ul class="navbar-nav">
         <li class="nav-item">
