--- a/index.html
+++ b/index.html
@@ -12,21 +12,28 @@
 
   </head>
   <body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
-      <a class="navbar-brand" href="#">
-        <img src="img/logo.png" alt="Logo" style="width:60px;">
-      </a>
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" href="#">HOME</a>
-        </li>
-        <li class="nav-item lives">
-          <a class="nav-link disabled" href="#">LIVES</a>
-        </li>
-        <li class="nav-item contato">
-          <a class="nav-link disabled" href="#">DISCORD</a>
-        </li>
-      </ul>
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="img/logo.png" alt="Logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggler="collapse" data-bs-target="#mynavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="mynavbar">
+          <ul class="navbar-nav me-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Lives</a>
+            </li>
+            <li class="nav-item d-flex">
+              <a class="nav-link" href="#">Discord</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
 
     <div class="container live-display">
