--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
         </div>
         <div class="column streamer4">
           <div class="card" style="width:400px">
-              <img class="card-img-top" src="img/4.jpeg" alt="Card image">
+              <img class="card-img-top" src="img/helle.jpg" alt="Card image">
             <div class="card-body">
-                <h4 class="card-title">John Doe</h4>
-                <p class="card-text">Some example text.</p>
+                <h4 class="card-title">Hellequinm</h4>
+                <p class="card-text">Venha Conhecer!</p>
                 <a href="#" class="btn btn-primary stretched-link">See Profile</a>
             </div>
           </div>
