--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="card-body">
                 <h4 class="card-title">Hellequinm</h4>
                 <p class="card-text">Venha Conhecer!</p>
-                <a href="#" class="btn btn-primary stretched-link">See Profile</a>
+                <a href="https://www.twitch.tv/hellequinm" class="btn btn-primary stretched-link">See Profile</a>
             </div>
           </div>
         </div>
