--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Liverino</title>
     <link rel="stylesheet" href="css/estilo.css">
-    <link rel="icon" type="image/x-icon" href="img/logo.ico">
+    <link rel="icon" type="image/x-icon" href="img/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="img/logo.png" alt="Logo" width="60px">
+          <img src="img/logo.png" alt="Logo" width="90px">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggler="collapse" data-bs-target="#mynavbar">
           <span class="navbar-toggler-icon"></span>
@@ -23,10 +23,10 @@
         <div class="collapse navbar-collapse" id="mynavbar">
           <ul class="navbar-nav me-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link active" href="#">Home</a>
             </li>
             <li class="nav-item ">
-              <a class="nav-link disabled" href="#">Lives</a>
+              <a class="nav-link" href="lives.html">Lives</a>
             </li>
             <li class="nav-item" style="position:absolute;right:20px;">
               <a class="nav-link disabled" href="#">Discord</a>
@@ -39,7 +39,7 @@
     <div class="container live-display">
       <div class="container-fluid">
         <div class="row row-cols-1">
-          <div class="col-8">
+          <div class="col-8 titulo">
             <h2>STREAMERS AO VIVO</h2>
           </div>
         </div>
@@ -61,7 +61,10 @@
     </div>
 
     <div class="container-fluid streamers">
-      <h2>CONHEÇA MAIS STREAMERS</h2>
+      <div class="col-8 titulo">
+          <h2>CONHEÇA MAIS STREAMERS</h2>
+      </div>
+
       <div class="row">
         <div class="column streamer1">
           <div class="card" style="width:400px">
