--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <img src="img/logo.png" alt="Logo" width="142">
           </a>
 
-          <button class="navbar-toggler" data-toggler="collapse" data-target="#mynavbar">
+          <button class="navbar-toggler" data-toggle="collapse" data-target="#mynavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
 
