--- a/index.html
+++ b/index.html
@@ -123,14 +123,14 @@
             </p>
           </div>
           <div class="col-md-4">
-            <iframe class="responsive-iframe" src="https://player.twitch.tv/?channel=guigo_hc&parent=www.example.com&autoplay=false" frameborder="0" allowfullscreen="true" scrolling="no" height="285" width="370"></iframe>
+            <iframe class="responsive-iframe" src="https://player.twitch.tv/?channel=guigo_hc&parent=ricardofuly.github.io&autoplay=false" frameborder="0" allowfullscreen="true" scrolling="no" height="285" width="370"></iframe>
             <h4>Guigo_HC</h4>
             <p>
               Oieeee... Estou aqui pra jogar uns joguinhos bem legais, vem se divertir comigo? Me segue nas redes pra saber quando vai ter Live, sempre aviso por la. ^^
             </p>
           </div>
           <div class="col-md-4">
-            <iframe src="https://player.twitch.tv/?channel=polaroidf&parent=www.example.com&autoplay=false" frameborder="0" allowfullscreen="true" scrolling="no" height="285" width="370"></iframe>
+            <iframe src="https://player.twitch.tv/?channel=polaroidf&parent=ricardofuly.github.io&autoplay=false" frameborder="0" allowfullscreen="true" scrolling="no" height="285" width="370"></iframe>
             <h4>Polaroidf</h4>
             <p>
               Normalmente, podes encontrar-me a escrever no meu blog Entre Linhas mas às vezes, estou aqui a descontrair e divertir-me. Amante de arte e nas horas vagas, adoro jogar!
