Live Page Online

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                 <a class="nav-link active" href="index.html">Home</a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link disabled" href="#">Lives</a>
+                <a class="nav-link" href="lives.html">Lives</a>
               </li>
               <li class="nav-item">
-                <a class="btn btn-outline-light ml-4" href="#">Discord</a>
+                <a class="btn btn-outline-light ml-4" href="https://discord.gg/n5wk9xw">Discord</a>
               </li>
             </ul>
           </div>
