Footer Links added

--- a/lives.html
+++ b/lives.html
@@ -243,22 +243,22 @@
         <div class="row">
           <div class="col-md-8">
             <p>
-              <a href="#">Home</a>
-              <a href="#">Lives</a>
-              <a href="#">Discord</a>
+              <a href="home.html">Home</a>
+              <a href="lives.html" class="active">Lives</a>
+              <a href="https://discord.gg/n5wk9xw">Discord</a>
             </p>
           </div>
           <div class="col-md-4 d-flex justify-content-end">
-            <a href="" class="btn btn-outline-dark">
+            <a href="#" class="btn btn-outline-dark">
               <i class="fab fa-facebook"></i>
             </a>
-            <a href="" class="btn btn-outline-dark ml-2">
+            <a href="https://twitter.com/orickyrj" class="btn btn-outline-dark ml-2">
               <i class="fab fa-twitter"></i>
             </a>
-            <a href="" class="btn btn-outline-dark ml-2">
+            <a href="https://www.instagram.com/orickyrj/" class="btn btn-outline-dark ml-2">
               <i class="fab fa-instagram"></i>
             </a>
-            <a href="" class="btn btn-outline-dark ml-2">
+            <a href="https://www.youtube.com/rickyrj" class="btn btn-outline-dark ml-2">
               <i class="fab fa-youtube"></i>
             </a>
           </div>
