--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
         <div class="row">
           <div class="col-md-8">
             <p>
-              <a href="#">Home</a>
-              <a href="#">Lives</a>
-              <a href="#">Discord</a>
+              <a href="home.html" class="active">Home</a>
+              <a href="lives.html">Lives</a>
+              <a href="https://discord.gg/n5wk9xw">Discord</a>
             </p>
           </div>
           <div class="col-md-4 d-flex justify-content-end">
