--- a/lives.html
+++ b/lives.html
@@ -255,7 +255,7 @@
             <a href="https://twitter.com/orickyrj" class="btn btn-outline-dark ml-2">
               <i class="fab fa-twitter"></i>
             </a>
-            <a href="https://www.instagram.com/orickyrj/" class="btn btn-outline-dark ml-2">
+            <a href="https://www.instagram.com/orickyrj" class="btn btn-outline-dark ml-2">
               <i class="fab fa-instagram"></i>
             </a>
             <a href="https://www.youtube.com/rickyrj" class="btn btn-outline-dark ml-2">
