--- a/lives.html
+++ b/lives.html
@@ -135,7 +135,7 @@
 
         	<div class="box nine">
         		<div class="date">
-        			<h4>6/29/18</h4>
+        			<h4>game_set</h4>
         		</div>
         		<h1>UNFORGETTABLE</h1>
         		<div class="poster p8">
@@ -145,7 +145,7 @@
 
         	<div class="box ten">
         		<div class="date">
-        			<h4>6/29/18</h4>
+        			<h4>game_set</h4>
         		</div>
         		<h1>AMAZING</h1>
         		<div class="poster p9">
@@ -155,7 +155,7 @@
 
         	<div class="box eleven">
         		<div class="date">
-        			<h4>6/29/18</h4>
+        			<h4>game_set</h4>
         		</div>
         		<h1>LOVE</h1>
         		<div class="poster p10">
@@ -171,7 +171,7 @@
         <div class="wrap">
           <div class="box tlv">
               <div class="date">
-                <h4>6/29/18</h4>
+                <h4>game_set</h4>
               </div>
               <h1>LEARN</h1>
               <div class="poster p11">
@@ -181,7 +181,7 @@
 
             <div class="box thirteen">
               <div class="date">
-                <h4>6/29/18</h4>
+                <h4>game_set</h4>
               </div>
               <h1>YEP</h1>
               <div class="poster p12">
@@ -191,7 +191,7 @@
 
             <div class="box ftn">
               <div class="date">
-                <h4>6/29/18</h4>
+                <h4>game_set</h4>
               </div>
               <h1>SMILE</h1>
               <div class="poster p13">
@@ -201,7 +201,7 @@
 
             <div class="box fith">
               <div class="date">
-                <h4>6/29/18</h4>
+                <h4>game_set</h4>
               </div>
               <h1>CODE</h1>
               <div class="poster p14">
@@ -211,7 +211,7 @@
 
             <div class="box sith">
               <div class="date">
-                <h4>6/29/18</h4>
+                <h4>game_set</h4>
               </div>
               <h1>CARDS</h1>
               <div class="poster p15">
@@ -227,7 +227,7 @@
         <div class="wrap">
           <div class="box sevth">
         		<div class="date">
-        			<h4>6/29/18</h4>
+        			<h4>game_set</h4>
         		</div>
         		<h1>FLEXBOX</h1>
         		<div class="poster p16">
