--- a/lives.html
+++ b/lives.html
@@ -61,7 +61,7 @@
         		</div>
         		<H1>DANIMITO1</H1>
         		<div class="poster p2">
-              <a href="#" class="stretched-link">
+              <a href="https://www.twitch.tv/danimito1" class="stretched-link">
                 <img src="img/danimito.png" alt="">
               </a>
         		</div>
@@ -73,7 +73,7 @@
         		</div>
         		<h1>O_Chris</h1>
         		<div class="poster p3">
-              <a href="#" class="stretched-link">
+              <a href="https://www.twitch.tv/o__chris" class="stretched-link">
                 <img src="img/chris.png" alt="">
               </a>
         		</div>
@@ -85,7 +85,7 @@
         		</div>
         		<h1>HELLEQUINM</h1>
         		<div class="poster p4">
-              <a href="#" class="stretched-link">
+              <a href="https://www.twitch.tv/hellequinm" class="stretched-link">
                 <img src="img/helle.jpg" alt="">
               </a>
         		</div>
@@ -115,7 +115,7 @@
         		</div>
         		<h1>GUIGO_HC</h1>
         		<div class="poster p6">
-              <a href="#" class="stretched-link">
+              <a href="https://www.twitch.tv/guigo_hc" class="stretched-link">
                 <img src="img/guigo.png" alt="">
               </a>
         		</div>
@@ -127,7 +127,7 @@
         		</div>
         		<h1>AMANDANOXI</h1>
         		<div class="poster p7">
-              <a href="#" class="stretched-link">
+              <a href="https://www.twitch.tv/amandanoxi" class="stretched-link">
                 <img src="img/nox.png" alt="">
               </a>
         		</div>
