--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               <p>
                 Conheça pessoas legais, com a nossa plataforma, não tenha vergonha, basta clicar e conversar.
               </p>
-              <a href="#" class="btn btn-danger">Seguir</a>
+              <a href="https://www.twitch.tv/o__chris" class="btn btn-danger">Seguir</a>
             </div>
           </div>
           <div class="col-ms-6">
@@ -105,7 +105,7 @@
               <p>
                 Segue ae, ele é legal você não vai se arrepender!
               </p>
-              <a href="#" class="btn btn-danger">Seguir</a>
+              <a href="https://www.twitch.tv/danimito1" class="btn btn-danger">Seguir</a>
             </div>
           </div>
         </div>
