--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
                 </div>
               </form>
 
-                <p>Disponível para
+                <!-- <p>Disponível para
                   <a href="" class="btn btn-outline-light">
                     <i class="fab fa-android fa-lg"></i>
                   </a>
                   <a href="" class="btn btn-outline-light">
                     <i class="fab fa-apple"></i>
                   </a>
-                </p>
+                </p> -->
             </div>
           </div>
           <div class="col-md-6 d-none d-md-block">
