--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               </p>
               <form class="mt-4 mb-4">
                 <div class="input-group input-group-lg">
-                  <input type="text" placeholder="Seu E-mail" class="form-control">
+                  <input type="text" placeholder="Seu E-mail" class="form-control" disabled>
                   <div class="input-group-append">
                     <button type="button" class="btn btn-danger">Assine</button>
                   </div>
